source/fitsio.d


    /* these record the 'requested' options to be used when the image is compressed */
    int request_compress_type; /* requested image compression algorithm */
    c_long[MAX_COMPRESS_DIM] request_tilesize; /* requested tiling size */
    float request_quantize_level; /* requested quantize level */
    int request_quantize_method; /* requested  quantizing method */
    int request_dither_seed; /* starting offset into the array of random dithering */
    int request_lossy_int_compress; /* lossy compress integer image as if float image? */
    int request_huge_hdu; /* use '1Q' rather then '1P' variable length arrays */
    float request_hcomp_scale; /* requested HCOMPRESS scale factor */
    int request_hcomp_smooth; /* requested HCOMPRESS smooth parameter */

    /* these record the actual options that were used when the image was compressed */
    int compress_type; /* type of compression algorithm */
    c_long[MAX_COMPRESS_DIM] tilesize; /* size of compression tiles */
    float quantize_level; /* floating point quantization level */
    int quantize_method; /* floating point pixel quantization algorithm */
    int dither_seed; /* starting offset into the array of random dithering */

    /* other compression parameters */
    int compressimg; /* 1 if HDU contains a compressed image, else 0 */
    char[12] zcmptype; /* compression type string */
    int zbitpix; /* FITS data type of image (BITPIX) */
    int zndim; /* dimension of image */
    c_long[MAX_COMPRESS_DIM] znaxis; /* length of each axis */
    c_long maxtilelen; /* max number of pixels in each image tile */
    c_long maxelem; /* maximum byte length of tile compressed arrays */

    int cn_compressed; /* column number for COMPRESSED_DATA column */
    int cn_uncompressed; /* column number for UNCOMPRESSED_DATA column */
    int cn_gzip_data; /* column number for GZIP2 lossless compressed data */
    int cn_zscale; /* column number for ZSCALE column */
    int cn_zzero; /* column number for ZZERO column */
    int cn_zblank; /* column number for the ZBLANK column */

    double zscale; /* scaling value, if same for all tiles */
    double zzero; /* zero pt, if same for all tiles */
    double cn_bscale; /* value of the BSCALE keyword in header */
    double cn_bzero; /* value of the BZERO keyword (may be reset) */
    double cn_actual_bzero; /* actual value of the BZERO keyword  */
    int zblank; /* value for null pixels, if not a column */

    int rice_blocksize; /* first compression parameter: Rice pixels/block */
    int rice_bytepix; /* 2nd compression parameter:   Rice bytes/pixel */
    float hcomp_scale; /* 1st hcompress compression parameter */
    int hcomp_smooth; /* 2nd hcompress compression parameter */

    int* tilerow; /* row number of the array of uncompressed tiledata */
    c_long* tiledatasize; /* length of the array of tile data in bytes */
    int* tiletype; /* datatype of the array of tile (TINT, TSHORT, etc) */
    void** tiledata; /* array of uncompressed tile of data, for row *tilerow */
    void** tilenullarray; /* array of optional array of null value flags */
    int* tileanynull; /* anynulls in the array of tile? */

    char* iobuffer; /* pointer to FITS file I/O buffers */
    c_long[NIOBUF] bufrecnum; /* file record number of each of the buffers */
    int[NIOBUF] dirty; /* has the corresponding buffer been modified? */
    int[NIOBUF] ageindex; /* relative age of each buffer */
}

struct fitsfile
{
    /* structure used to store basic HDU information */

    int HDUposition; /* HDU position in file; 0 = first HDU */
    FITSfile* Fptr; /* pointer to FITS file structure */
}

struct iteratorCol
{
    /* structure for the iterator function column information */

    /* elements required as input to fits_iterate_data: */

    fitsfile* fptr; /* pointer to the HDU containing the column */
    int colnum; /* column number in the table (use name if < 1) */
    char[70] colname; /* name (= TTYPEn value) of the column (optional) */
    int datatype; /* output datatype (converted if necessary  */
    int iotype; /* = InputCol, InputOutputCol, or OutputCol */

    /* output elements that may be useful for the work function: */

    void* array; /* pointer to the array (and the null value) */
    c_long repeat; /* binary table vector repeat value */
    c_long tlmin; /* legal minimum data value */
    c_long tlmax; /* legal maximum data value */
    char[70] tunit; /* physical unit string */
    char[70] tdisp; /* suggested display format */
}

enum InputCol = 0; /* flag for input only iterator column       */
enum InputOutputCol = 1; /* flag for input and output iterator column */
enum OutputCol = 2; /* flag for output only iterator column      */
enum TemporaryCol = 3; /* flag for temporary iterator column INTERNAL */

/*=============================================================================
*
*       The following wtbarr typedef is used in the fits_read_wcstab() routine,
*       which is intended for use with the WCSLIB library written by Mark
*       Calabretta, http://www.atnf.csiro.au/~mcalabre/index.html
*
*       In order to maintain WCSLIB and CFITSIO as independent libraries it
*       was not permissible for any CFITSIO library code to include WCSLIB
*       header files, or vice versa.  However, the CFITSIO function
*       fits_read_wcstab() accepts an array of structs defined by wcs.h within
*       WCSLIB.  The problem then was to define this struct within fitsio.h
*       without including wcs.h, especially noting that wcs.h will often (but
*       not always) be included together with fitsio.h in an applications
*       program that uses fits_read_wcstab().
*
*       Of the various possibilities, the solution adopted was for WCSLIB to
*       define "struct wtbarr" while fitsio.h defines "typedef wtbarr", a
*       untagged struct with identical members.  This allows both wcs.h and
*       fitsio.h to define a wtbarr data type without conflict by virtue of
*       the fact that structure tags and typedef names share different
*       namespaces in C. Therefore, declarations within WCSLIB look like
*
*          struct wtbarr *w;
*
*       while within CFITSIO they are simply
*
*          wtbarr *w;
*
*       but as suggested by the commonality of the names, these are really the
*       same aggregate data type.  However, in passing a (struct wtbarr *) to
*       fits_read_wcstab() a cast to (wtbarr *) is formally required.
*===========================================================================*/

struct wtbarr
{
    int i; /* Image axis number.                       */
    int m; /* Array axis number for index vectors.     */
    int kind; /* Array type, 'c' (coord) or 'i' (index).  */
    char[72] extnam; /* EXTNAME of binary table extension.       */
    int extver; /* EXTVER  of binary table extension.       */
    int extlev; /* EXTLEV  of binary table extension.       */
    char[72] ttype; /* TTYPEn of column containing the array.   */
    c_long row; /* Table row number.                        */
    int ndim; /* Expected array dimensionality.           */
    int* dimlen; /* Where to write the array axis lengths.   */
    double** arrayp; /* Where to write the address of the array  */
    /* allocated to store the array.            */
}

/*  The following exclusion if __CINT__ is defined is needed for ROOT */

/*  the following 3 lines are needed to support C++ compilers */

int fits_read_wcstab (fitsfile* fptr, int nwtb, wtbarr* wtb, int* status);

/*  The following exclusion if __CINT__ is defined is needed for ROOT */

/* WCSLIB_GETWCSTAB */

/* error status codes */

enum CREATE_DISK_FILE = -106; /* create disk file, without extended filename syntax */
enum OPEN_DISK_FILE = -105; /* open disk file, without extended filename syntax */
enum SKIP_TABLE = -104; /* move to 1st image when opening file */
enum SKIP_IMAGE = -103; /* move to 1st table when opening file */
enum SKIP_NULL_PRIMARY = -102; /* skip null primary array when opening file */
enum USE_MEM_BUFF = -101; /* use memory buffer when opening file */
enum OVERFLOW_ERR = -11; /* overflow during datatype conversion */
enum PREPEND_PRIMARY = -9; /* used in ffiimg to insert new primary array */
enum SAME_FILE = 101; /* input and output files are the same */
enum TOO_MANY_FILES = 103; /* tried to open too many FITS files */
enum FILE_NOT_OPENED = 104; /* could not open the named file */
enum FILE_NOT_CREATED = 105; /* could not create the named file */
enum WRITE_ERROR = 106; /* error writing to FITS file */
enum END_OF_FILE = 107; /* tried to move past end of file */
enum READ_ERROR = 108; /* error reading from FITS file */
enum FILE_NOT_CLOSED = 110; /* could not close the file */
enum ARRAY_TOO_BIG = 111; /* array dimensions exceed internal limit */
enum READONLY_FILE = 112; /* Cannot write to readonly file */
enum MEMORY_ALLOCATION = 113; /* Could not allocate memory */
enum BAD_FILEPTR = 114; /* invalid fitsfile pointer */
enum NULL_INPUT_PTR = 115; /* NULL input pointer to routine */
enum SEEK_ERROR = 116; /* error seeking position in file */
enum BAD_NETTIMEOUT = 117; /* bad value for file download timeout setting */

enum BAD_URL_PREFIX = 121; /* invalid URL prefix on file name */
enum TOO_MANY_DRIVERS = 122; /* tried to register too many IO drivers */
enum DRIVER_INIT_FAILED = 123; /* driver initialization failed */
enum NO_MATCHING_DRIVER = 124; /* matching driver is not registered */
enum URL_PARSE_ERROR = 125; /* failed to parse input file URL */
enum RANGE_PARSE_ERROR = 126; /* failed to parse input file URL */

enum SHARED_ERRBASE = 150;
enum SHARED_BADARG = SHARED_ERRBASE + 1;
enum SHARED_NULPTR = SHARED_ERRBASE + 2;
enum SHARED_TABFULL = SHARED_ERRBASE + 3;
enum SHARED_NOTINIT = SHARED_ERRBASE + 4;
enum SHARED_IPCERR = SHARED_ERRBASE + 5;
enum SHARED_NOMEM = SHARED_ERRBASE + 6;
enum SHARED_AGAIN = SHARED_ERRBASE + 7;
enum SHARED_NOFILE = SHARED_ERRBASE + 8;
enum SHARED_NORESIZE = SHARED_ERRBASE + 9;
